# Zen-of-Python

./: .gitignore  LICENSE  README.md  readme.py  readme_gen.py  reset.sh
5 H Data Challenge/: README.md  main.ipynb
API Antara News/: README.md  app.py  index.py  requirements.txt  vercel.json
Add silent in mp3/: main.py
Automatic Photoshop Click/: main.py
Bank's Customers Analyst/: ANN_Codes.ipynb  README.md
Build 15 Applications and Games/: Project-1_Dice_rolling_stimulator.py  README.md  requirements.txt
CRUD API With MongoDb/: README.md  main.py
Compress Pic/: Compress.cmd  README.md  requirements.txt
Compress Vidio/: Compress VIDIO.txt  main.py
Conclusion Dqlab Analyst Career Track/: README.md
Create a Symbolic Link/: main.py
Customer Personality Analysis/: Customer Personality Analysis.ipynb  README.md  requirements.txt
Download File From Sosial Media/: main.ipynb  main.py
Flask Form/: index.html  main.py
Hack Rank Test/: answer.ipynb
Hotel Recommendation System/: Hotel Recommendation System.ipynb  README.md  requirements.txt
Image to Text/: main.py
Load Database Tables Into Pandas/: database.sqlite  main.py
Modern GUI Tkinter/: example_background_image.py  image_example.py
Multi JPG Subfolder to PDF/: FolderToPDF.cmd  README.md  instal_in_regedit.reg  requirements.txt
NLP Artikel Indoesia/: NLP_Python.ipynb  README.md  requirements.txt
NLP Fake or Real News/: NLP_Main.ipynb  README.md  main.py  predict.joblib
NLP US Elections deploy/: NLP_Example.ipynb
python_poetry/: pyproject.toml
python_poetry/python_poetry/: main.py
(+95 files in other folders)
